--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,17 @@ version: '2'
 
 services:
 
-  web:
-      build: ./nginx
-      ports:
-          - "8085:80"
-      volumes:
-          - ../app:/code
-          - ./site.conf:/etc/nginx/conf.d/site.conf
-      links:
-          - php
-  php:
-      build: ./php
-      volumes:
-          - ../app:/code
+    web:
+        image: nginx:latest
+        ports:
+            - "8084:80"
+        volumes:
+            - ../phpinstajax:/app
+            - ./site.conf:/etc/nginx/conf.d/default.conf
+        links:
+            - php
+
+    php:
+        image: php:7-fpm
+        volumes:
+          - ../phpinstajax:/app
