--- a/site.conf
+++ b/site.conf
@@ -16,4 +16,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
+    # Any route that doesn't have a file extension (e.g. /devices)
+    # React will handle the routing 
+    # This prevents NGINX from serving a 404
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 }
